application/frontend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-deploy
  template:
    metadata:
      labels:
        app: frontend-deploy
    spec:
      containers:
      - image: nginx:1.25
        imagePullPolicy: IfNotPresent
        name: frontend
        ports:
        - containerPort: 80
        volumeMounts:
          - name: nginx-config-file
            mountPath: /etc/nginx/conf.d/
      volumes:
      - name: nginx-config-file
        configMap:
          name: frontend-nginx-conf-file
