application/frontend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: app
  labels:
    app: frontend-svc
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: frontend-deploy
