application/frontend/istio-ingress.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  labels:
    app: frontend-deploy
  name: tls-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - frontend.DNS_DOMAIN # this is used by external-dns to extract DNS names
    port:
      name: https-frontend
      number: 443
      protocol: HTTPS
    tls:
      credentialName: frontend-ingress-gateway-tls
      mode: SIMPLE
